feat: add pub/sub and service @command for CLI